upgrade to .net 8

--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -1,11 +1,11 @@
 ﻿{
-   "profiles": {
+  "profiles": {
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5000",
-      "launchUrl": "test",
+      "launchUrl": "hello",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
